Process implementation
