# API/API/Controllers/ClientController.cs
@@ -30,7 +30,7 @@ namespace API.Controllers
         [HttpGet("{id}")]
         [Produces(MediaTypeNames.Application.Json)]
         [ProducesResponseType(typeof(ClientDto), (int)HttpStatusCode.OK)]
-        public async Task<IActionResult> GetById(Guid id)
+        public async Task<IActionResult> GetClientById(Guid id)
         {
             var query = new GetClientQuery
             {
