# API/Infrastructure/API.Infrastructure/Database/Process/Queries/GetProcessQueryHandler.cs
@@ -1,6 +1,8 @@
 ﻿using API.Application.DTO;
 using API.Application.Process.Queries;
 using API.Framework.EventBus;
+using AutoMapper;
+using Microsoft.EntityFrameworkCore;
 using System;
 using System.Threading;
 using System.Threading.Tasks;
@@ -9,9 +11,24 @@ namespace API.Infrastructure.Database.Process.Queries
 {
     public class GetProcessQueryHandler : IQueryHandler<GetProcessQuery, ProcessDto>
     {
-        public Task<ProcessDto> Handle(GetProcessQuery request, CancellationToken cancellationToken)
+        private readonly DatabaseContext _databaseContext;
+        private readonly IMapper _mapper;
+
+        public GetProcessQueryHandler(DatabaseContext databaseContext, IMapper mapper)
         {
-            throw new NotImplementedException();
+            _mapper = mapper;
+            _databaseContext = databaseContext;
+        }
+        public async Task<ProcessDto> Handle(GetProcessQuery request, CancellationToken cancellationToken)
+        {
+            var process = await _databaseContext.Process.FirstOrDefaultAsync(x => x.Id == request.Id, cancellationToken);
+
+            if (process == null)
+            {
+                throw new Exception($"Can't find process with id {request.Id}");
+            }
+
+            return _mapper.Map<ProcessDto>(process);
         }
     }
 }
